--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
     text-align: center;
   }
 
-    .section h3 {
+  .section h3 {
     text-align: center;
   }
   
@@ -76,7 +76,12 @@ body {
   .section a{
     text-align: center;
   }
-  
+
+  .email-container {
+    text-align: center; 
+    margin-top: 10px; 
+  }
+
   .footer {
     background: #333;
     color: #fff;
@@ -84,4 +89,5 @@ body {
     padding: 10px 0;
     margin-top: 20px;
   }
+  
   
